Bug 409573 - Null deref [@ nsSVGUseFrame::GetCanvasTM] with filter, use, XBL. r+sr=tor,a1.9=beltzner